--- a/ObjectTracker/ObjectTracker/ObjectTracker.vcxproj.filters
+++ b/ObjectTracker/ObjectTracker/ObjectTracker.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="ObjectTracker.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="OSCapture.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="OSCapture.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
